--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -23,6 +25,7 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "vitest": "^0.9.4"
   }
 }
