--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-		"test": "vitest",
-		"coverage": "vitest run --coverage"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "dayjs": "^1.11.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.5",
+    "c8": "^7.11.2",
     "husky": "^7.0.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
