--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "advanced-stack-park",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "dayjs": "^1.11.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "6"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.3.0"
   },
   "engines": {
     "node": ">=14"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/cli": "17.0.3",
+    "@commitlint/config-conventional": "17.0.3",
+    "@commitlint/types": "17.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -29,9 +30,9 @@
     "c8": "^7.11.2",
     "husky": "^7.0.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5",
-    "vitest": "^0.9.4"
+    "tailwindcss": "3.1.4",
+    "typescript": "4.7.4",
+    "vite": "2.9.12",
+    "vitest": "0.16.0"
   }
 }
