--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "capture-website": "node ./scripts/capture-website.mjs"
   },
   "dependencies": {
     "dayjs": "^1.11.1",
@@ -28,9 +29,11 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.5",
     "c8": "^7.11.2",
+    "capture-website": "^3.2.0",
     "husky": "^7.0.4",
     "postcss": "^8.4.12",
     "tailwindcss": "3.1.4",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4",
     "vite": "2.9.12",
     "vitest": "0.16.0"
