--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
     "@commitlint/types": "17.0.0",
+    "@types/node": "^20.4.8",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
